--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="btn_barcode">Barcode-EN</string>
     <string name="btn_nfc">NFC-EN</string>
     <string name="txt_receive">Receive</string>
+    <string name="txt_send">Send</string>
 </resources>
