--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="btn_nfc">NFC-EN</string>
     <string name="txt_receive">Receive</string>
     <string name="txt_send">Send</string>
+    <string name="txt_amount_eth">%s &#xf42e;</string>
 </resources>
