--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="txt_receive">Receive</string>
     <string name="txt_send">Send</string>
     <string name="txt_amount_eth">%s &#xf42e;</string>
-    <string name="txt_env_eth">Rinkeby(ETH)</string>
+    <string name="txt_amount_nanj">%s &#xf4f3;</string>
+    <string name="txt_env_eth">ETH</string>
 </resources>
