--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">   </string>
+    <string name="app_name">NANJ Wallet</string>
     <string name="btn_barcode">Barcode-EN</string>
     <string name="btn_nfc">NFC-EN</string>
     <string name="txt_receive">Receive</string>
     <string name="txt_send">Send</string>
     <string name="txt_amount_eth">%s &#xf42e;</string>
-    <string name="txt_amount_nanj">%s &#xf4f3;</string>
+    <string name="txt_amount_nanj">%s</string>
     <string name="txt_env_eth">ETH</string>
 </resources>
